--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,77 @@
-$primary-color: rgb(65, 64, 70);
+@import "config";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
-    background: $primary-color;
-    color: rgba(255, 255, 255, 0.897);
+  background: $primary-color;
+  @include background;
+  color: rgba(255, 255, 255, 0.897);
+  height: 100%;
+  margin: 0;
+  font-family: "Segoe UI", "Tahoma", "Geneva", "Verdana", "sans-serif";
+  line-height: 1.5;
+}
+
+// Headings
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-weight: 400;
+
+  // & below is looking for : h1.lg-heading (or h2, h3)
+  &.lg-heading {
+    font-size: 6rem;
+  }
+
+  &.sm-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    font-size: 2rem;
+    background: rgba(lighten($primary-color, 2), 0.5);
+  }
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+}
+
+.text-secondary {
+  color: $secondary-color;
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 0.4rem;
+
+      &:hover {
+        color: $secondary-color;
+        @include easeOut;
+      }
+    }
+  }
+
+  &#home {
+    overflow: hidden;
+
+    h1 {
+      margin-top: 20vh;
+    }
+  }
 }
