--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
-@import "config";
+@import 'config';
+@import 'menu';
 
 * {
   box-sizing: border-box;
@@ -51,19 +52,23 @@ header {
 }
 
 main {
-  padding: 4rem;
+  padding: 10rem 4rem 0 4rem;
   height: 100%;
 
   .icons {
     margin-top: 1rem;
+    font-size: 2rem;
 
     a {
       padding: 0.4rem;
 
-      &:hover {
-        color: $secondary-color;
-        @include easeOut;
+      i {
+        &:hover {
+          color: $secondary-color;
+          @include easeOut;
+        }
       }
+
     }
   }
 
