--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -28,3 +28,32 @@ $background-opacity: 0.75;
         }
     }
 }
+
+// Media Query Mixins ====>
+//Small
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+
+// Medium
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+// Large
+@mixin mediaLg {
+    @media screen and (min-width: 769) and (max-width: 1170px) {
+        @content;
+    }
+}
+
+// XLarge
+@mixin mediaXl {
+    @media screen and (min-width: 1171px) {
+        @content;
+    }
+}
