--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -36,6 +36,10 @@
     font-size: 24px;
   }
 
+  .nav-item {
+    margin-top: 3%;
+  }
+
   .menu-branding {
     height: 25vh;
     transform: translate3d(100%, 0, 0);
@@ -45,6 +49,18 @@
       width: 150px;
       height: 150px;
     }
+  }
+
+  .about-info {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas:
+      'bioimage'
+      'bio'
+      'job1'
+      'job2'
+      'job3';
+    grid-template-columns: 1fr;
   }
 }
 
