--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import 'config';
 @import 'menu';
-@import 'mobile';
+
 
 * {
   box-sizing: border-box;
@@ -9,7 +9,7 @@
 body {
   background: $primary-color;
   @include background;
-  color: rgba(255, 255, 255, 0.897);
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", "Tahoma", "Geneva", "Verdana", "sans-serif";
@@ -53,8 +53,9 @@ header {
 }
 
 main {
-  padding: 10rem 4rem 0 4rem;
-  height: 100%;
+  padding: 4rem;
+  min-height: calc(100vh - 60px);
+  // height: 100%;
 
   .icons {
     margin-top: 1rem;
@@ -81,3 +82,54 @@ main {
     }
   }
 }
+
+
+.about-info {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas:
+    'bioimage bio bio'
+    'job1 job2 job3';
+  // repeat 3 times 1fr;
+  grid-template-columns: repeat(3, 1fr);
+
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+  }
+
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+
+  .job-1 {
+    grid-area: job1;
+  }
+
+  .job-2 {
+    grid-area: job2;
+  }
+
+  .job-3 {
+    grid-area: job3;
+  }
+
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-color 5px solid;
+  }
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
+}
+
+@import 'mobile';
