--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,10 +1,18 @@
 // Widescreens
 
-@include mediaXl {}
+@include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 
 // Desktops & Laptops
 
-@include mediaLg {}
+@include mediaLg {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 
 // Tablets & Small Laptops
 
@@ -62,6 +70,10 @@
       'job3';
     grid-template-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Smartphones
@@ -69,5 +81,9 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
