--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -44,11 +44,25 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.8;
+  opacity: 1;
   visibility: hidden;
 
   &.show {
     visibility: visible;
+  }
+
+  .portrait {
+    z-index: 5;
+    position: fixed;
+    margin-left: calc(25vw - 125px);
+    margin-top: calc(50vh - 125px);
+    width: 250px;
+    height: 250px;
+    background: url('../img/portrait.jpg');
+    background-size: cover;
+    border-radius: 50%;
+    border: solid 3px $secondary-color;
+    opacity: 1;
   }
 
   // &-something   trick - dont have to create separate class!!
@@ -65,9 +79,10 @@
   }
 
   &-nav {
+    opacity: 0.85;
     margin: 0;
     padding: 0;
-    background: darken($primary-color, 1.5);
+    background: darken($primary-color, 12.5);
     list-style: none;
     transform: translate3d(0, -100%, 0);
     @include easeOut;
@@ -80,6 +95,7 @@
 
   // Branding Side
   &-branding {
+    opacity: 0.85;
     background: lighten($primary-color, 5);
     transform: translate3d(0, -100%, 0);
     @include easeOut;
@@ -93,6 +109,7 @@
       width: 250px;
       height: 250px;
       background: url('../img/portrait.jpg');
+      background-size: cover;
       border-radius: 50%;
       border: solid 3px $secondary-color;
       opacity: 1;
