--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -19,10 +19,9 @@
     transform: rotate(180deg);
 
     .btn-line {
-
       // Line 1 offset-rotate:
       &:nth-child(1) {
-        transform: rotate(45deg) translate(5px, 5px)
+        transform: rotate(45deg) translate(5px, 5px);
       }
 
       // Line 2 - Hide
@@ -32,7 +31,7 @@
 
       // Line 3 - rotate
       &:nth-child(3) {
-        transform: rotate(-45deg) translate(7px, -6px)
+        transform: rotate(-45deg) translate(7px, -6px);
       }
     }
   }
@@ -58,7 +57,7 @@
     margin-top: calc(50vh - 125px);
     width: 250px;
     height: 250px;
-    background: url('../img/portrait.jpg');
+    background: url("../img/port.jpg");
     background-size: cover;
     border-radius: 50%;
     border: solid 3px $secondary-color;
@@ -108,7 +107,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url('../img/portrait.jpg');
+      background: url("../img/portrait.jpg");
       background-size: cover;
       border-radius: 50%;
       border: solid 3px $secondary-color;
@@ -125,8 +124,8 @@
       transform: translate3d(0, 0, 0);
     }
 
-    &.current>a {
-      color: $secondary-color
+    &.current > a {
+      color: $secondary-color;
     }
   }
 
@@ -145,7 +144,6 @@
       color: $secondary-color;
     }
   }
-
 }
 
 // Delay each nav item slide by 0.1s
